# svg-dom

./: .editorconfig  .gitignore  Cargo.toml  README.md  SECURITY.md  changelog.md  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
a11y-fixture/: Cargo.toml  index.html
a11y-fixture/src/: lib.rs
accessibility-tree-test/: Cargo.toml
accessibility-tree-test/src/: lib.rs
accessibility-tree-test/tests/: accessibility_tree.rs  filter_blend_render.rs
demo/: index.html  style.css
demo-server/: Cargo.toml
demo-server/src/: main.rs
docs/: design_notes.md  elements.md  gaps.md  rejected_ideas.md  testing.md
docs/design_notes/: README.md  animation.md  filters.md  geometry.md  node_and_tree.md  path_data.md  performance.md  references.md  rejected_ideas.md  svg_node_api.md  transforms.md
docs/design_notes/rejected_ideas/: README.md  animation.md  api_surface.md  events.md  filters.md  geometry.md  node_and_tree.md  performance.md  references.md
docs/svg_elements/: README.md  clipping_and_masking.md  core_operations.md  filters.md  paint_servers.md  path.md  structural_elements.md  text.md
examples/: readme_minimal.rs
src/: animate.rs  demo.rs  error.rs  lib.rs  node.rs  root.rs
src/animate/: anim_frame.rs  anim_loop.rs  mod.rs
src/demo/: colours.rs  events.rs  geometry.rs  mod.rs  paint.rs  shapes.rs  structure.rs  texts.rs
src/demo/highlight/: mod.rs  unit_tests.rs
src/error/: mod.rs  unit_tests.rs
src/node/: accessibility.rs  attrs.rs  cached.rs  event.rs  geometry.rs  listeners.rs  mod.rs  text.rs  transform.rs  tree.rs
src/node/listeners/: drag.rs  focus.rs  keyboard.rs  mod.rs  mouse.rs  pointer.rs  touch.rs  wheel.rs
src/root/: accessibility.rs  anchor.rs  batch.rs  circle.rs  clip_path.rs  defs.rs  ellipse.rs  factory.rs  filter.rs  foreign_object.rs  group.rs  image.rs  line.rs  marker.rs  mask.rs  metadata.rs  mod.rs  path.rs  pattern.rs  polygon.rs  polyline.rs  rect.rs  style.rs  svg_root.rs  switch.rs  symbol.rs  text.rs  use_node.rs  utils.rs  view.rs
src/root/attrs/: mod.rs  writer.rs
src/root/filter/: attrs.rs  blend_mode.rs  channel.rs  color_matrix_type.rs  composite_operator.rs  edge_mode.rs  filter_units.rs  mod.rs  morphology_operator.rs  region.rs  transfer_function.rs  turbulence_type.rs
src/root/filter/primitives/: blend.rs  color_matrix.rs  component_transfer.rs  composite.rs  convolve_matrix.rs  displacement_map.rs  drop_shadow.rs  flood.rs  gaussian_blur.rs  image.rs  merge.rs  mod.rs  morphology.rs  offset.rs  tile.rs  turbulence.rs
src/root/gradient/: linear.rs  mod.rs  radial.rs
src/root/path/: elliptical_arc.rs  mod.rs  path_def.rs  unit_tests.rs
src/root/utils/: matrix2d.rs  mod.rs  point.rs  rect.rs  size.rs  unit_tests.rs
tests/: accessibility.rs  animation_loop.rs  clip_path.rs  common.rs  defs.rs  filter.rs  gradient.rs  mask.rs  pattern.rs  svg_node.rs  svg_root.rs  symbol.rs  text_path.rs  tspan.rs  view.rs
tests/defs/: deferred_append.rs  main.rs  marker_children.rs  marker_construction.rs  marker_id_validation.rs  marker_refs.rs  svg_defs.rs
tests/filter/: apply.rs  blend.rs  chains.rs  color_matrix.rs  component_transfer.rs  composite.rs  construction.rs  convolve_matrix.rs  displacement_map.rs  drop_shadow.rs  flood.rs  gaussian_blur.rs  image.rs  main.rs  merge.rs  morphology.rs  offset.rs  region.rs  tile.rs  turbulence.rs
tests/svg_node/: attr_writer.rs  attrs.rs  cached.rs  events.rs  geometry.rs  helpers.rs  main.rs  text.rs  transform.rs  tree.rs
