[workspace]
members = ["demo-server"]
# Keep plain `cargo build` / `cargo test` focused on the library; the demo
# server (which pulls in actix) is built only on demand via `cargo demo`.
default-members = ["."]

[package]
name = "svg-dom"
authors = ["Chris Whealy <chris@whealy.com>"]
version = "0.1.0"
edition = "2024"
description = "A lightweight Rust/WebAssembly library for creating and mutating live SVG content directly in the browser DOM"
keywords = ["svg", "wasm", "browser", "dom"]
categories = ["wasm", "web-programming", "rendering"]
repository = "https://github.com/ChrisWhealy/svg-dom"
license = "MIT"

[features]
demo = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["Document", "DocumentFragment", "Element", "Event", "EventTarget", "MouseEvent", "Node", "SvgElement", "SvgsvgElement", "SvgTextContentElement", "UiEvent", "Window"]

[dev-dependencies]
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"

[dev-dependencies.web-sys]
version = "0.3"
features = ["Document", "DocumentFragment", "Element", "EventTarget", "MouseEvent", "Node", "Window"]
