[workspace]
members = ["demo-server"]
# Keep plain `cargo build` / `cargo test` focused on the library; the demo
# server (which pulls in actix) is built only on demand via `cargo demo`.
default-members = ["."]

[package]
name = "svg-dom"
authors = ["Chris Whealy <chris@whealy.com>"]
version = "0.1.50"
edition = "2024"
rust-version = "1.85"
description = "A lightweight Rust/WebAssembly library for creating and mutating live SVG content directly in the browser DOM"
keywords = ["svg", "wasm", "browser", "dom"]
categories = ["wasm", "web-programming", "rendering"]
repository = "https://github.com/ChrisWhealy/svg-dom"
license = "MIT"
readme = "README.md"

[features]
demo = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "AddEventListenerOptions",
    "Document",
    "DocumentFragment",
    "DragEvent",
    "Element",
    "Event",
    "EventTarget",
    "FocusEvent",
    "KeyboardEvent",
    "MouseEvent",
    "PointerEvent",
    "Node",
    "SvgElement",
    "SvgsvgElement",
    "SvgTextContentElement",
    "TouchEvent",
    "WheelEvent",
    "Window",
]

[dev-dependencies]
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"

[dev-dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "DocumentFragment",
    "DragEvent",
    "Element",
    "Event",
    "EventTarget",
    "FocusEvent",
    "KeyboardEvent",
    "MouseEvent",
    "Node",
    "PointerEvent",
    "SvgPoint",
    "SvgTextContentElement",
    "TouchEvent",
    "Window",
    "WheelEvent",
]
